# tokenBrain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  main.py
bot/config/: __init__.py  settings.py
bot/core/: __init__.py  exceptions.py  models.py  protocols.py
bot/handlers/: __init__.py  common_handler.py  router.py  token_handler.py
bot/middleware/: __init__.py  error_handler.py  logging.py
bot/services/: __init__.py  factory.py  orchestrator.py
bot/services/explain/: __init__.py  mock_llm.py  openrouter_provider.py  service.py
bot/services/risk/: __init__.py  service.py
bot/services/token_data/: __init__.py  aggregator.py  helius_provider.py  mock_provider.py
bot/templates/: __init__.py  messages.py
bot/utils/: __init__.py  formatters.py  validators.py
tests/: __init__.py  conftest.py  test_helius_provider.py  test_middleware.py  test_openrouter_provider.py  test_orchestrator.py  test_risk_service.py  test_validators.py
