[project]
name = "tokenbrain"
version = "0.1.0"
description = "AI-powered Solana token risk analyzer Telegram bot"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "venv", "__pycache__"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bot"]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
